source/blender/blenlib/BLI_math_matrix.h
@@ -166,6 +166,8 @@ void pseudoinverse_m3_m3(float Ainv[3][3], float A[3][3], float epsilon);
 
 bool has_zero_axis_m4(float matrix[4][4]);
 
+void invert_m4_m4_safe(float Ainv[4][4], float A[4][4]);
+
 /****************************** Transformations ******************************/
 
 void scale_m3_fl(float R[3][3], float scale);
